--- a/dwarf_non_dwarf_galaxy_classification.ipynb
+++ b/dwarf_non_dwarf_galaxy_classification.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using k-nearest neighbors (KNN) algorithm for developing an algorithm to classify dwarf and non-dwarf galaxies based on only the basic observed properties, i.e. the brightness in two bands."
+    "#### Using k-nearest neighbors (KNN) algorithm for developing an algorithm to classify dwarf and non-dwarf galaxies based on only the basic observed properties, i.e. the brightness in two bands."
    ]
   },
   {
