--- a/dwarf_non_dwarf_galaxy_classification.ipynb
+++ b/dwarf_non_dwarf_galaxy_classification.ipynb
@@ -904,7 +904,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It seems that not much is gained by using beyond around 15 neighbors and the current simple algorithm correctly classify around 95% of the test sample."
+    "#### It seems that not much is gained by using beyond around 15 neighbors and the current simple algorithm correctly classifies around 95% of the test sample."
    ]
   },
   {
